# ARIES

./: README.md  SECURITY.md  docker-compose.yml  install.sh  requirements.txt
.github/workflows/: static.yml
backend/: .env.example  Dockerfile  main.py  requirements-test.txt  requirements.txt  run_tests.py
backend/api/: auth.py  models.py  routes.py
backend/api/routes/: devices.py
backend/config/: settings.py
backend/core/: agent.py
backend/core/auth/: crud.py  deps.py  init_db.py  models.py  router.py  schemas.py  security.py
backend/core/connectors/: __init__.py  cisco_connector.py  rj45.py  shell.py  ssh.py  telnet.py
backend/core/database/: db.py  migration.py
backend/core/knowledge/: kg.py  rag.py  vectorstore.py
backend/core/llm/: bayes_classifier.py  model_classifier.py  rwkv_manager.py  text_vectorizer.py
backend/core/models/: rwkv_inference.py
backend/core/mqtt/: manager.py  storage.py
backend/core/optimization/: intel_optimizer.py
backend/core/optimization/simd_libs/: Makefile  simd_avx2.c
backend/core/prediction/: fault_predictor.py
backend/core/tools/: kube_manager.py  network_analyzer.py  web_search.py
backend/core/vault/: manager.py
backend/tests/: conftest.py  test_database.py  test_fault_predictor.py  test_knowledge_graph.py  test_rag.py  test_simd_wrapper.py  test_vectorstore.py
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api/: frontend.md
docs/deployment/: configuration.md  docker.md  installation.md  requirements.md
docs/guide/: architecture.md  contributing.md  getting-started.md  introduction.md
frontend/: Dockerfile  package.json
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: app.js  knowledge.js  network.js  server.js  task.js  user.js
frontend/src/views/dashboard/: index.vue
frontend/src/views/login/: index.vue
frontend/src/views/server/: list.vue
mqtt/config/: mosquitto.conf
networkips/: CMakeLists.txt  README.md
networkips/config/: nips.yaml
networkips/include/capture/: packet_capture.hpp
networkips/include/common/: config.hpp  logger.hpp
networkips/include/detection/: threat_detector.hpp
networkips/include/feature/: feature_extractor.hpp
networkips/include/ml/: anomaly_detector.hpp
networkips/include/response/: response_controller.hpp
networkips/scripts/: nips-start.sh  nips.service
networkips/src/: CMakeLists.txt  main.cpp
networkips/src/capture/: packet_capture.cpp
networkips/src/feature/: feature_extractor.cpp
networkips/training/: requirements.txt
networkips/training/scripts/: evaluate_model.py  preprocess_data.py  train_bert_http.py  train_correlation_model.py  train_llama_lora.py  train_model.py
web/: README.md  index.html  requirements.txt  server.py
web/css/: style.css
web/js/: app.js
web/js/components/: ModelManager.js  ModelSettings.js
web/templates/: login.html
